temp/objects/Yearly_Revenue_Rollups__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Yearly Revenue Rollups</relationshipLabel>
        <relationshipName>Yearly_Revenue_Rollups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yearly_Actual_Revenue__c</fullName>
        <label>Yearly Actual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_Forecasted_Revenue_Weighted__c</fullName>
        <label>Yearly Forecasted Revenue(Weighted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_Forecasted_Revenue__c</fullName>
        <label>Yearly Forecasted Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_Revenue_Date__c</fullName>
        <description>Hold the Yearly Revenue Date of the Opportunity Level</description>
        <label>Yearly Revenue Date</label>
        <type>Date</type>
    </fields>
    <label>Yearly Revenue Rollup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Yearly_Revenue_Date__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Yearly_Actual_Revenue__c</columns>
        <columns>Yearly_Forecasted_Revenue__c</columns>
        <columns>Yearly_Forecasted_Revenue_Weighted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Yearly Revenue Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yearly Revenue Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>